--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test_aisales",
   "version": "0.1.0",
-  "description": "AI Trust Phase 1 advisor web app with backend integrations.",
+  "description": "AI Sales Phase 1 advisor web app with backend integrations.",
   "main": "server/index.js",
   "scripts": {
     "dev": "node server/index.js",
