--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test_aisales",
+  "name": "ai_trust_app",
   "version": "0.1.0",
-  "description": "AI Sales Phase 1 advisor web app with backend integrations.",
+  "description": "AI Trust confidence scorecard app with Stripe checkout and PDF report library.",
   "main": "server/index.js",
   "scripts": {
     "dev": "node server/index.js",
